# rust-swagger-railway

./: Cargo.toml  Dockerfile  README.md  railway.toml
src/: main.rs
